--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mime-types": "^2.1.27",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4"
   }
